Fixing overflow button text at 980px viewport

--- a/site/pages/our-work/case-study/fortnums-tea/style.css
+++ b/site/pages/our-work/case-study/fortnums-tea/style.css
@@ -81,6 +81,7 @@
 
 .contactBox__button {
   composes: smallButton from "../../../../css/_links.css";
+  padding: 0 12px;
 }
 
 .imageRight,
